trunk/Archive2/d1/85a1caeaa7c68d/output
main.cpp:1:1: error: unknown type name 'fn'
fn:
^
main.cpp:1:3: error: expected unqualified-id
fn:
  ^
main.cpp:3:13: warning: '$' in identifier [-Wdollar-in-identifier-extension]
    movl    $1, %eax
            ^
main.cpp:6:13: warning: '$' in identifier [-Wdollar-in-identifier-extension]
    cmpl    $1, %edx\\ compare variable1 to 1
            ^
main.cpp:10:13: warning: '$' in identifier [-Wdollar-in-identifier-extension]
    subl    $1, %edx\\ variable1 -1
            ^
main.cpp:11:13: warning: '$' in identifier [-Wdollar-in-identifier-extension]
    cmpl    $1, %edx\\ compare variable1 with 1
            ^
4 warnings and 2 errors generated.
